15-PolicyDrivenGovernanceAndAdmissionControl/02-CreatingASimpleMutatingWebhook/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
